# cofre

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.toml  README.md  flake.nix
crates/cofre/: Cargo.toml
crates/cofre-types/: Cargo.toml
crates/cofre-types/src/: lib.rs
crates/cofre-types/tests/: dispatcher_registration.rs
crates/cofre/src/: backends.rs  generation.rs  inventory.rs  main.rs
docs/: backends.md  design.md  generation-policies.md  operator-runbook.md  security-model.md
