[workspace]
resolver = "3"
members = [
    "crates/cofre-types",
    "crates/cofre",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/pleme-io/cofre"
repository = "https://github.com/pleme-io/cofre"
authors = ["pleme-io"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
# Workspace crates
cofre-types = { path = "crates/cofre-types" }

# Pleme-io sibling-directory path deps for typed-dispatcher
# catalog integration (theory/UNIFIED-COMPUTING-MODEL.md §VI).
gen-platform = { path = "../gen/crates/gen-platform" }
gen-types = { path = "../gen/crates/gen-types" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"

# Crypto / randomness
getrandom = "0.2"
zeroize = { version = "1", features = ["zeroize_derive"] }
blake3 = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime + HTTP (for AkeylessBackend)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }

# Atomic temp files for SOPS hijack
tempfile = "3"

# Akeyless API SDK — direct HTTPS calls, no argv exposure
akeyless-api = { git = "https://github.com/pleme-io/akeyless-api", branch = "main" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
