[package]
name = "cofre"
description = "Typed secret materialization — generates and seeds secrets into SOPS / Akeyless without ever exposing plaintext to the operator. The bin half of the cofre toolchain."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "cofre"
path = "src/main.rs"

[dependencies]
cofre-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
getrandom = { workspace = true }
zeroize = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
akeyless-api = { workspace = true }
